# Khaos

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
assets/: README.md
cmake/: copy_runtime_dlls.cmake
src/: BandDiagram.cpp  BandDiagram.hpp  BandView.cpp  BandView.hpp  CrystalLattice.cpp  CrystalLattice.hpp  CrystalView.cpp  CrystalView.hpp  DriftDiffusion.cpp  DriftDiffusion.hpp  Material.cpp  Material.hpp  Palette.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Preset.cpp  Preset.hpp  UIPanel.cpp  UIPanel.hpp  main.cpp
tests/: test_physics.cpp
